--- a/Serviz-Backend/src/main/resources/application.properties
+++ b/Serviz-Backend/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=Serviz-Backend
+
+spring.datasource.url=jdbc:mysql://localhost:3306/serviz
+spring.datasource.username=root
+spring.datasource.password=abcd@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=2525
+spring.mail.username=${BREVO_USERNAME}
+spring.mail.password=${BREVO_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.from=darshbalar02@gmail.com
+spring.mail.protocol=smtp
+
+razorpay.key.id=${RAZORPAY_ID}
+razorpay.key.secret=${RAZORPAY_SECRET}
